--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -14,8 +14,8 @@
       <p>Bitte wähle das Alter des Schülers:</p>
       <div class="form-group">
           <fieldset>
-              <input type="radio" id="reg-u18" name="student-age" value="u18"><label for="reg-u18">&nbsp;&nbsp;unter 18 Jahre</label><br>
-              <input type="radio" id="reg-18" name="student-age" value="18"><label for="reg-18">&nbsp;&nbsp;über 18 Jahre</label>
+              <input type="radio" id="reg-u18" name="student-age" value="u18"><label for="reg-u18">unter 18 Jahre alt</label><br>
+              <input type="radio" id="reg-18" name="student-age" value="18"><label for="reg-18">mindestens 18 Jahre alt</label>
           </fieldset>
       </div>
         <div id="infotext-u18" class="hidden">
