--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
   {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=5 action="/registration/submit" method="post" class="registration-form"}}
+    {{#embed "lib/forms/paginatedForm" sections=5 action="/registration/submit" method="post" class="registration-form parent"}}
       {{#content "panels"}}
       <section data-panel="section-1">
         <h4>Schülerdaten</h4>
@@ -155,7 +155,7 @@
             </div>
           </p>
 
-          <p>Beim ersten Login muss ein neues Passwort gewählt werden. Schüler ab 14 Jahren müssen beim ersten Login die Einwilligungserklärungen zusätzlich selbst bestätigen.</p>
+          <p>Beim ersten Login muss ein neues Passwort gewählt werden. Schüler, die mindestens 14 Jahre alt sind, müssen beim ersten Login die Einwilligungserklärungen zusätzlich selbst bestätigen.</p>
         </div>
 
         <p>Ihr Kind kann sich nun einloggen:</p>
