--- a/views/administration/forms/form-invitation.hbs
+++ b/views/administration/forms/form-invitation.hbs
@@ -1,5 +1,5 @@
 <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
 <div class="form-group">
-    <label for="invitation">Verteile folgenden Link an deine Schüler, um sie zur Schule einzuladen: </label>
-    <input class="form-control" name="invitation" type="text" />
+    <label for="invitation-link">Verteile folgenden Link an deine Schüler, um sie zur Schule einzuladen: </label>
+    <input id="invitation-link" class="form-control" name="invitation" type="text" />
 </div>
