added button to delete user

--- a/static/styles/administration/users.scss
+++ b/static/styles/administration/users.scss
@@ -4,8 +4,9 @@
     &.fa-check{
         color: green;
     }
-    &.fa-circle, &.fa-adjust{
+    &.fa-circle-thin{
         color: orange;
+        font-weight: bold;
     }
     &.fa-times{
         color: red;
