--- a/views/administration/forms/form-delete-user.hbs
+++ b/views/administration/forms/form-delete-user.hbs
@@ -1,2 +1,2 @@
-<p>Sind Sie sich sicher, dass Sie folgendes Element löschen wollen?</p>
+<p>Sind Sie sich sicher, dass Sie folgenden Nutzer wollen?</p>
 <input class="form-control" name="firstName" type="text" disabled />
