use ENV-variable for naming

--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -47,7 +47,7 @@
 <hr class="my-2"/>
 
 <p>
-    <b>Deine Schüler sind noch nicht in der Schul-Cloud?</b><br/>
+    <b>Deine Schüler sind noch nicht in der {{theme.short_title}}?</b><br/>
     Lade die Eltern per Link ein, ihre Kinder in deiner Klasse zu registrieren und die elektronische Einwilligungserklärung abzugeben.
 </p>
 
