--- a/views/firstLogin/firstLoginExistingUserU14.hbs
+++ b/views/firstLogin/firstLoginExistingUserU14.hbs
@@ -12,7 +12,7 @@
       {{#content "panels"}}
           <section data-panel="section-1" class="submit-page">
               <h4>Du hast es fast geschafft…</h4>
-              <p>Da du unter 14 Jahre alt bist, reicht die Einverständniserklärung deiner Erziehungsberechtigten zur Nutzung der Schul-Cloud. Sobald du 14 Jahre alt bist, wirst du automatisch nach deinem Einverständnis gefragt. Bitte gib dazu dein Geburtsdatum ein.</p>
+              <p>Da du unter 14 Jahre alt bist, reicht die Einverständniserklärung deiner Erziehungsberechtigten zur Nutzung der {{theme.short_title}}. Sobald du 14 Jahre alt bist, wirst du automatisch nach deinem Einverständnis gefragt. Bitte gib dazu dein Geburtsdatum ein.</p>
               <div class="row">
                   <div class="form-group col-md-6 col-sm-12">
                       <label>Geburtsdatum: *</label>
@@ -24,8 +24,8 @@
 
           <section data-panel="section-2">
               <h4>Danke!</h4>
-              <p>Du kannst jetzt mit der Benutzung der HPI Schul-Cloud fortfahren.<br>
-                  <a class="btn btn-primary mt-2" href="//schul-cloud.org">Schul-Cloud erkunden</a>
+              <p>Du kannst jetzt mit der Benutzung der {{theme.title}} fortfahren.<br>
+                  <a class="btn btn-primary mt-2" href="//schul-cloud.org">{{theme.short_title}} erkunden</a>
               </p>
           </section>
       {{/content}}
