--- a/views/lib/forms/form-poll.hbs
+++ b/views/lib/forms/form-poll.hbs
@@ -1,7 +1,7 @@
 <div class="form-group">
     <div class="poll">
         <div>
-            <p>Die nächste Befragung zum Projekt Schul-Cloud ist online. Gerne möchten wir Sie erneut um Ihre Mitarbeit bitten! Die Bearbeitung wird ca. 20 - 25 Minuten Ihrer Zeit in Anspruch nehmen.</p>
+            <p>Die nächste Befragung zum Projekt {{theme.short_title}} ist online. Gerne möchten wir Sie erneut um Ihre Mitarbeit bitten! Die Bearbeitung wird ca. 20 - 25 Minuten Ihrer Zeit in Anspruch nehmen.</p>
             <p>Vielen Dank für Ihre Unterstützung!</p>
         </div>
     </div>
