--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -35,7 +35,7 @@
                     <li>
                         <a class="sc-branding" href="/">
                             <div class="cloud-logo"></div>
-                            <div class="sc-title"><span>{{themeTitle}}</span></div>
+                            <div class="sc-title"><span>{{theme.short_title}}</span></div>
                         </a>
                     </li>
                     {{#each sidebarItems}}
