--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -14,8 +14,8 @@
       <section data-panel="section-1">
         <h4>Schülerdaten</h4>
         <p>Daten Ihres Kindes</p>
-        <p>Die Schul-Cloud bewahrt Nutzerdaten sicher auf und gibt sie nicht an Dritte weiter. Die Verarbeitung der Daten erfolgt entsprechend der hohen gesetzlichen Datenschutz-Anforderungen.</p>
-        <p>Für die Nutzung der Schul-Cloud benötigen wir folgende Angaben für Ihr Kind:</p>
+        <p>Die {{theme.short_title}} bewahrt Nutzerdaten sicher auf und gibt sie nicht an Dritte weiter. Die Verarbeitung der Daten erfolgt entsprechend der hohen gesetzlichen Datenschutz-Anforderungen.</p>
+        <p>Für die Nutzung der {{theme.short_title}} benötigen wir folgende Angaben für Ihr Kind:</p>
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
               <label>Vorname: *</label>
@@ -62,7 +62,7 @@
       <section data-panel="section-2">
         <h4>Elterndaten</h4>
         <p>Ihre Daten</p>
-        <p>Für Schüler unter 18 Jahren muss ein Erziehungsberechtigter in die Nutzung der Schul-Cloud einwilligen.</p>
+        <p>Für Schüler unter 18 Jahren muss ein Erziehungsberechtigter in die Nutzung der {{theme.short_title}} einwilligen.</p>
         <p>Dazu benötigen wir folgende Angaben von Ihnen:</p>
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
@@ -79,7 +79,7 @@
             <label>Ihre E-Mail Adresse * <small>(Darf nicht gleich der E-Mail Adresse Ihres Kindes sein)</small></label>
             <input class="form-control" type="email" name="parent-email" required placeholder="eltern@schul-cloud.org"></input>
         </div>
-        <p>Wir benötigen eine E-Mail-Adresse, damit Ihre Einwilligung in die Nutzung der Schul-Cloud rechtlich gültig ist. Die Schul-Cloud gibt die Adresse nicht weiter. Sie erhalten keine unerwünschten Mails.</p>
+        <p>Wir benötigen eine E-Mail-Adresse, damit Ihre Einwilligung in die Nutzung der {{theme.short_title}} rechtlich gültig ist. Die {{theme.short_title}} gibt die Adresse nicht weiter. Sie erhalten keine unerwünschten Mails.</p>
         <p>Zusätzlich planen wir die Entwicklung eines Eltern-Zugangs, über den Sie mit dem Klassenlehrer kommunizieren und mit dem Sie die Lernfortschritte Ihres Kindes nachvollziehen können. Sobald diese Funktionen zur Verfügung stehen, fragen wir Sie, ob wir Ihre E-Mail-Adresse dafür verwenden dürfen.</p>
       </section>
 
@@ -88,7 +88,7 @@
       <section data-panel="section-3">
         <h4>Einwilligung</h4>
         <p>Einwilligungserklärung</p>
-        <p>Bitte bestätigen Sie folgende Einwilligungserklärungen, damit Ihr Kind die Vorteile der Schul-Cloud nutzen kann:</p>
+        <p>Bitte bestätigen Sie folgende Einwilligungserklärungen, damit Ihr Kind die Vorteile der {{theme.short_title}} nutzen kann:</p>
         <p>Ich, <b data-from="parent-firstname"></b> <b data-from="parent-secondname"></b>, bin erziehungsberechtigt für
           <b data-from="student-firstname"></b>
           <b data-from="student-secondname"></b> 
@@ -98,25 +98,25 @@
             <input name="Erhebung" type="checkbox" value="true" required/>
             <span>Ich habe die <a href="#">Datenschutzerklärung</a> gelesen und willige in die Verarbeitung der Nutzerdaten ein.</span>
         </label>
-        <p class="explanation">Um die Nutzung der Schul-Cloud zu ermöglichen, ist die Verarbeitung von personenbezogenen Daten der Nutzer erforderlich. Dies erfolgt ausschließlich entsprechend der hohen gesetzlichen Datensicherheits-Anforderungen. Das HPI verarbeitet nur die Daten, deren Erhebung unbedingt erforderlich ist und sorgt dafür, dass sie nicht in unbefugte Hände geraten. </p>
+        <p class="explanation">Um die Nutzung der {{theme.short_title}} zu ermöglichen, ist die Verarbeitung von personenbezogenen Daten der Nutzer erforderlich. Dies erfolgt ausschließlich entsprechend der hohen gesetzlichen Datensicherheits-Anforderungen. Das HPI verarbeitet nur die Daten, deren Erhebung unbedingt erforderlich ist und sorgt dafür, dass sie nicht in unbefugte Hände geraten. </p>
 
         <label>
             <input name="Forschung" type="checkbox" value="true" required/>
             <span>Ich habe die <a href="#">Informationen zum Forschungsvorhaben</a> gelesen und willige in die wissenschaftliche Auswertung ein.</span>
         </label>
-        <p class="explanation">Die HPI Schul-Cloud wird von einem wissenschaftlichen Forschungsprojekt begleitet, das der Optimierung des Lernerlebnisses in der Schul-Cloud dient. Im Rahmen dessen werden Nutzungsdaten anonymisiert ausgewertet.</p>
+        <p class="explanation">Die {{theme.title}} wird von einem wissenschaftlichen Forschungsprojekt begleitet, das der Optimierung des Lernerlebnisses in der {{theme.short_title}} dient. Im Rahmen dessen werden Nutzungsdaten anonymisiert ausgewertet.</p>
 
         <label>
             <input name="Pseudonymisierung" type="checkbox" value="true" required/>
             <span> Ich habe die <a href="#">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein</span>
         </label>
-        <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der Schul-Cloud. </p>
+        <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der {{theme.short_title}}. </p>
 
         <label>
             <input name="Nutzungsbedingungen" type="checkbox" value="Nutzungsbedingungen" required/>
             <span>Ich habe die <a href="#">Nutzungsbedingungen</a> gelesen und stimme ihnen zu.</span>
         </label>
-        <p class="explanation">Die Nutzung der Schul-Cloud ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes Schul-Cloud-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A">widerruf@schul-clud.org</a></p>
+        <p class="explanation">Die Nutzung der {{theme.short_title}} ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes {{theme.short_title}}-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A">widerruf@schul-clud.org</a></p>
       </section>
 
 
@@ -136,13 +136,13 @@
 
 
       <section data-panel="section-5">
-        <h4>Vielen Dank für die Registrierung in der Schul-Cloud</h4>
+        <h4>Vielen Dank für die Registrierung in der {{theme.short_title}}</h4>
         <div>
           <p>
             Mit folgenden Daten kann sich
             <b data-from="student-firstname"></b>
             <b data-from="student-secondname"></b>
-            in der Schul-Cloud anmelden. Bitte geben Sie die Daten an Ihr Kind weiter. Zusätzlich haben Sie und Ihr Kind die Daten per E-Mail erhalten.
+            in der {{theme.short_title}} anmelden. Bitte geben Sie die Daten an Ihr Kind weiter. Zusätzlich haben Sie und Ihr Kind die Daten per E-Mail erhalten.
             <div class="print">
               <div class="recap">
                 <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
