--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -9,7 +9,7 @@
   {{/content}}
   {{#content "page"}}
     <div id="welcome-screen">
-      <p>Willkommen zur Anmeldung in der HPI Schul-Cloud!</p>
+      <p>Willkommen zur Anmeldung in der {{theme.title}}!</p>
       <p>Je nach Alter des Schülers* verändert sich der Anmeldeprozess. Bei Schülern unter 18 muss ein Erziehungsberechtigter die nächsten Schritte durchführen, bei volljährigen Schülern er selbst.</p>
       <p>Bitte wähle das Alter des Schülers:</p>
       <div class="form-group">
@@ -19,16 +19,16 @@
           </fieldset>
       </div>
         <div id="infotext-u18" class="hidden">
-            <p>Wir freuen uns, dass sie ihrem Kind die Nutzung der Schul-Cloud ermöglichen und so mithelfen, gemeinsam den nächsten Schritt zur digitalen Unterstützung des Unterrichts zu gehen – Open Source, gemeinnützig und datenschutzkonform.</p>
-            <p>Wir bitten sie, ihr Kind zunächst in der Schul-Cloud zu registrieren und anschließend nach Angabe ihrer Daten der Nutzung der HPI Schul-Cloud zuzustimmen, damit ihr Kind die Vorteile der Lernumgebung nutzen kann.</p>
+            <p>Wir freuen uns, dass sie ihrem Kind die Nutzung der {{theme.short_title}} ermöglichen und so mithelfen, gemeinsam den nächsten Schritt zur digitalen Unterstützung des Unterrichts zu gehen – Open Source, gemeinnützig und datenschutzkonform.</p>
+            <p>Wir bitten sie, ihr Kind zunächst in der {{theme.short_title}} zu registrieren und anschließend nach Angabe ihrer Daten der Nutzung der {{theme.title}} zuzustimmen, damit ihr Kind die Vorteile der Lernumgebung nutzen kann.</p>
         </div>
         <div id="infotext-18" class="hidden">
-            <p>Wir freuen uns, dass du die HPI Schul-Cloud nutzen möchtest und mithilfst, gemeinsam den nächsten Schritt zur digitalen Unterstützung des Unterrichts zu gehen – Open Source, gemeinnützig und datenschutzkonform.</p>
-            <p>Bitte registriere dich zunächst in der HPI Schul-Cloud und stimme den Nutzungsbedingungen zu, damit du die Vorteile der digitalen Lernumgebung nutzen kannst.</p>
+            <p>Wir freuen uns, dass du die {{theme.title}} nutzen möchtest und mithilfst, gemeinsam den nächsten Schritt zur digitalen Unterstützung des Unterrichts zu gehen – Open Source, gemeinnützig und datenschutzkonform.</p>
+            <p>Bitte registriere dich zunächst in der {{theme.title}} und stimme den Nutzungsbedingungen zu, damit du die Vorteile der digitalen Lernumgebung nutzen kannst.</p>
             <p><strong>Achtung:</strong> Die folgende Anmeldung muss von dir als Schüler selbst vorgenommen werden, nicht von deinen Eltern.</p>
         </div>
       <button id="showRegistrationForm" class="btn btn-primary" disabled>Weiter</button>
-        <p><br><br>* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir die männliche Form. Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die Schul-Cloud ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. ‍🌈🎉🦄</p>
+        <p><br><br>* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir die männliche Form. Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. ‍🌈🎉🦄</p>
         <input type="hidden" name="classId" value="{{classId}}" />
     </div>
   {{/content}}
