--- a/views/firstLogin/firstLoginExistingUser.hbs
+++ b/views/firstLogin/firstLoginExistingUser.hbs
@@ -9,8 +9,8 @@
   {{/content}}
   {{#content "page"}}
     <div id="welcome-screen">
-      <p>Herzlich Willkommen in der HPI Schul-Cloud, {{currentUser.firstName}} {{currentUser.lastName}}</p>
-      <p>Mit dem Schuljahr 2018/2019 haben wir die Registrierung in der Schul-Cloud von Papier auf Digital umgestellt. Das macht es notwendig, dass wir dein Einverständnis zur Nutzung der Schul-Cloud erneut elektronisch erfassen, sofern du mindestens 14 Jahre alt bist.</p>
+      <p>Herzlich Willkommen in der {{theme.title}}, {{currentUser.firstName}} {{currentUser.lastName}}</p>
+      <p>Mit dem Schuljahr 2018/2019 haben wir die Registrierung in der {{theme.short_title}} von Papier auf Digital umgestellt. Das macht es notwendig, dass wir dein Einverständnis zur Nutzung der {{theme.short_title}} erneut elektronisch erfassen, sofern du mindestens 14 Jahre alt bist.</p>
 
         <p>Bitte wähle: Ich bin...</p>
         <div class="form-group">
@@ -21,7 +21,7 @@
         </div>
 
       <button id="showExistingLoginForm" class="btn btn-primary" disabled>Weiter</button>
-        <p><br><br>* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir die männliche Form. Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die Schul-Cloud ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. ‍🌈🎉🦄</p>
+        <p><br><br>* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir die männliche Form. Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. ‍🌈🎉🦄</p>
     </div>
   {{/content}}
 {{/extend}}
