--- a/views/firstLogin/firstLoginUE18.hbs
+++ b/views/firstLogin/firstLoginUE18.hbs
@@ -12,10 +12,10 @@
       {{#content "panels"}}
 
       <section data-panel="section-1">
-        <h4>Herzlich Willkommen in der Schul-Cloud, {{currentUser.firstName}} {{currentUser.lastName}}</h4>
-        <p>Wir freuen uns, dass du die Schul-Cloud nutzen möchtest.</p>
-        <p>Bitte ändere im nächsten Schritt dein Startpasswort, damit du mit der Benutzung der Schul-Cloud starten kannst.</p>
-        <p>Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der Schul-Cloud die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die Schul-Cloud ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄</p>
+        <h4>Herzlich Willkommen in der {{theme.short_title}}, {{currentUser.firstName}} {{currentUser.lastName}}</h4>
+        <p>Wir freuen uns, dass du die {{theme.short_title}} nutzen möchtest.</p>
+        <p>Bitte ändere im nächsten Schritt dein Startpasswort, damit du mit der Benutzung der {{theme.short_title}} starten kannst.</p>
+        <p>Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄</p>
       </section>
 
       <section data-panel="section-2" class="submit-page">
@@ -49,8 +49,8 @@
 
       <section data-panel="section-3">
         <h4>Fertig!</h4>
-        <p>Du kannst jetzt mit der Benutzung der HPI Schul-Cloud starten.</p>
-        <a class="btn btn-primary mt-2" href="//schul-cloud.org">Schul-Cloud erkunden</a>
+        <p>Du kannst jetzt mit der Benutzung der {{theme.title}} starten.</p>
+        <a class="btn btn-primary mt-2" href="//schul-cloud.org">{{theme.short_title}} erkunden</a>
       </section>
       {{/content}}
     {{/embed}}
