--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -13,8 +13,8 @@
       {{#content "panels"}}
       <section data-panel="section-1">
         <h4>Persönliche Daten</h4>
-        <p>Die Schul-Cloud bewahrt die Daten der Nutzer*Innen sicher auf und gibt sie nicht an Dritte weiter. Die Verarbeitung der Daten erfolgt entsprechend der hohen gesetzlichen Datenschutz-Anforderungen.</p>
-        <p>Für die Nutzung der Schul-Cloud benötigen wir folgende Angaben:</p>
+        <p>Die {{theme.short_title}} bewahrt die Daten der Nutzer*Innen sicher auf und gibt sie nicht an Dritte weiter. Die Verarbeitung der Daten erfolgt entsprechend der hohen gesetzlichen Datenschutz-Anforderungen.</p>
+        <p>Für die Nutzung der {{theme.short_title}} benötigen wir folgende Angaben:</p>
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
               <label>Vorname: *</label>
@@ -58,8 +58,8 @@
 
       <section data-panel="section-2">
         <h4>Einwilligungserklärung</h4>
-        <p>Die HPI Schul-Cloud bietet digitale Bildung für alle – fair, nicht profitorientiert und datenschutzkonform. Der Schutz von Schüler*Innen-Daten ist zentraler Bestandteil der Schul-Cloud.</p>
-        <p>Bitte bestätige folgende Einwilligungserklärungen, damit du die Schul-Cloud nutzen kannst.</p>
+        <p>Die {{theme.title}} bietet digitale Bildung für alle – fair, nicht profitorientiert und datenschutzkonform. Der Schutz von Schüler*Innen-Daten ist zentraler Bestandteil der {{theme.short_title}}.</p>
+        <p>Bitte bestätige folgende Einwilligungserklärungen, damit du die {{theme.short_title}} nutzen kannst.</p>
         <p>Ich, <b data-from="student-firstname"></b> <b data-from="student-secondname"></b>, erkläre Folgendes:</p>
         <label>
             <input name="Erhebung" type="checkbox" value="true" required/>
@@ -71,19 +71,19 @@
             <input name="Forschung" type="checkbox" value="true" required/>
             <span>Ich habe die <a href="#">Informationen zum Forschungsvorhaben</a> gelesen und willige in die wissenschaftliche Auswertung ein.</span>
         </label>
-        <p class="explanation">Die HPI Schul-Cloud wird von einem wissenschaftlichen Forschungsprojekt begleitet, das der Optimierung des Lernerlebnisses in der Schul-Cloud dient. Im Rahmen dessen werden Nutzungsdaten anonymisiert ausgewertet.</p>
+        <p class="explanation">Die {{theme.title}} wird von einem wissenschaftlichen Forschungsprojekt begleitet, das der Optimierung des Lernerlebnisses in der {{theme.short_title}} dient. Im Rahmen dessen werden Nutzungsdaten anonymisiert ausgewertet.</p>
 
         <label>
             <input name="Pseudonymisierung" type="checkbox" value="true" required/>
             <span> Ich habe die <a href="#">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein</span>
         </label>
-        <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der Schul-Cloud. </p>
+        <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der {{theme.short_title}}. </p>
 
         <label>
             <input name="Nutzungsbedingungen" type="checkbox" value="Nutzungsbedingungen" required/>
             <span>Ich habe die <a href="#">Nutzungsbedingungen</a> gelesen und stimme ihnen zu.</span>
         </label>
-        <p class="explanation">Die Nutzung der Schul-Cloud ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes Schul-Cloud-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A">widerruf@schul-clud.org</a></p>
+        <p class="explanation">Die Nutzung der {{theme.short_title}} ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes {{theme.short_title}}-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A">widerruf@schul-clud.org</a></p>
       </section>
 
 
@@ -102,10 +102,10 @@
 
       <section data-panel="section-4">
         <h4>Dankeschön</h4>
-        <p>Vielen Dank für die Registrierung in der Schul-Cloud!</p>
+        <p>Vielen Dank für die Registrierung in der {{theme.short_title}}!</p>
 
         <div id="userdata-summary">
-          <p>Mit folgenden Daten kannst du dich in der Schul-Cloud anmelden. Bitte bewahre die Anmeldedaten für den ersten Login auf.</p>
+          <p>Mit folgenden Daten kannst du dich in der {{theme.short_title}} anmelden. Bitte bewahre die Anmeldedaten für den ersten Login auf.</p>
           <div class="print">
             <div class="recap">
               <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
