--- a/views/template/registration.hbs
+++ b/views/template/registration.hbs
@@ -20,7 +20,7 @@
                         <table width="100%" border="0" bgcolor="#b10438" cellspacing="0" cellpadding="0" id="header">
                             <tr>
                                 <td valign="top" class="header_content">
-                                    <h1 style="color: #F4F4F4; font-size: 24px; text-align: center;">Einladung in die Schul-Cloud</h1>
+                                    <h1 style="color: #F4F4F4; font-size: 24px; text-align: center;">Einladung in die {{theme.short_title}}</h1>
                                 </td>
                             </tr>
                         </table>
@@ -36,7 +36,7 @@
                         <table width="100%" border="0" cellspacing="0" cellpadding="20">
                             <tr>
                                 <td valign="top">
-                                    <p style="color: #000000; font-size: 14px; line-height: 22px; text-align: center;">Sehr geehrte/r {{firstName}} {{lastName}} <br>Sie wurden eingeladen, der Schul-Cloud beizutreten, bitte vervollständigen Sie Ihre Einladung unter folgendem Link</p>
+                                    <p style="color: #000000; font-size: 14px; line-height: 22px; text-align: center;">Sehr geehrte/r {{firstName}} {{lastName}} <br>Sie wurden eingeladen, der {{theme.short_title}} beizutreten, bitte vervollständigen Sie Ihre Einladung unter folgendem Link</p>
                                 </td>
                             </tr>
                             <tr>
@@ -57,7 +57,7 @@
             <table width="600" border="0" bgcolor="#F6F6F6" cellspacing="0" cellpadding="20" id="footer_container">
                 <div class="imprint">
                     <div class="center">
-                        <a>© 2018 Schul-Cloud </a>
+                        <a>© 2018 {{theme.short_title}} </a>
 
                         <nobr>
                             <span> - </span>
