--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -20,7 +20,7 @@
                 <a href="/partner">Partner</a>
             </div>
             <div>
-                <p>Made with <span class="heart-color">❤</span> in Potsdam</p>
+                <p class="made-with-love">Made with <span class="heart">❤</span> in Potsdam</p>
             </div>
         </div>
     </div>
