--- a/views/firstLogin/firstLoginExistingGeb14.hbs
+++ b/views/firstLogin/firstLoginExistingGeb14.hbs
@@ -1,18 +1,25 @@
 {{#extend "lib/simple"}}
   {{#content "scripts" mode="append"}}
       <script src="/scripts/dataprivacy/dataprivacy.js" type="text/javascript" defer></script>
+      <script src="/scripts/confetti/confetti.js" type="text/javascript" defer></script>
       <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
   {{/content}}
   {{#content "styles" mode="append"}}
       <link rel="stylesheet" href="/styles/administration/dataprivacy.css"/>
+      <link rel="stylesheet" href="/styles/lib/confetti/confetti.css"/>
       <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
  {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=2 action="/firstLogin/submit" method="POST"}}
+    {{#embed "lib/forms/paginatedForm" sections=3 action="/firstLogin/submit" method="POST"}}
       {{#content "panels"}}
-      <section data-panel="section-1" class="submit-page">
+      <section data-panel="section-1" class="confetti-wrapper">
+        <h4>Herzlichen Glückwunsch, {{currentUser.firstName}} {{currentUser.lastName}}! 🎉🎈</h4>
+        <p>Du bist jetzt 14 Jahre alt. Bitte erkläre im folgenden Schritt dein Einverständnis zur Nutzung der {{theme.short_title}}. Ab 14 Jahren ist dies zusätzlich zum bereits erklärten Einverständnis deiner Eltern nötig, damit du die {{theme.short_title}} weiter nutzen kannst.</p>
+      </section>
+
+      <section data-panel="section-2" class="submit-page">
         <h4>Einwilligungserklärung</h4>
-        <p>Du bist älter als 14 Jahre. Deine Erziehungsberechtigten (oder du selbst, wenn du schon über 18 bist) haben der Nutzung bereits auf dem Papierweg zugestimmt. Bitte bestätige jetzt folgende Einwilligungserklärungen, damit du die {{theme.short_title}} weiter nutzen kannst.</p>
+        <p>Bitte bestätige jetzt folgende Einwilligungserklärungen, damit du die {{theme.short_title}} weiter nutzen kannst.</p>
 
           <p>Ich, <b>{{currentUser.firstName}} {{currentUser.lastName}}</b>, erkläre Folgendes:</p>
 
@@ -41,10 +48,10 @@
           <p class="explanation">Die Nutzung der {{theme.short_title}} ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes {{theme.short_title}}-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A" target="_blank">widerruf@schul-clud.org</a></p>
       </section>
 
-      <section data-panel="section-2">
+      <section data-panel="section-3">
         <h4>Danke!</h4>
         <p>Du kannst jetzt mit der Benutzung der {{theme.title}} fortfahren.<br>
-            <a class="btn btn-primary mt-2" href="//schul-cloud.org">{{theme.short_title}} erkunden</a>
+            <a class="btn btn-primary mt-2" href="/">{{theme.short_title}} erkunden</a>
         </p>
       </section>
       {{/content}}
