--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -77,7 +77,7 @@
 
         <div class="form-group">
             <label>Ihre E-Mail Adresse * <small>(Darf nicht gleich der E-Mail Adresse Ihres Kindes sein)</small></label>
-            <input class="form-control" type="email" name="parent-email" required placeholder="eltern@schul-cloud.org"></input>
+            <input class="form-control" type="email" name="parent-email" required placeholder="eltern@schul-cloud.org" autocomplete></input>
         </div>
         <p>Wir benötigen eine E-Mail-Adresse, damit Ihre Einwilligung in die Nutzung der {{theme.short_title}} rechtlich gültig ist. Die {{theme.short_title}} gibt die Adresse nicht weiter. Sie erhalten keine unerwünschten Mails.</p>
         <p>Zusätzlich planen wir die Entwicklung eines Eltern-Zugangs, über den Sie mit dem Klassenlehrer kommunizieren und mit dem Sie die Lernfortschritte Ihres Kindes nachvollziehen können. Sobald diese Funktionen zur Verfügung stehen, fragen wir Sie, ob wir Ihre E-Mail-Adresse dafür verwenden dürfen.</p>
