Logged in teacher automatically entered in class create, Klasse verwalten button in administration for teacher

--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -51,7 +51,7 @@
                                         <div class="card h-100 teacher-option" onclick="location.href='/administration/students'">
                                             <div class="card-block homework">
                                                 <div class="card-text">
-                                                    <h4><i class="fa fa-user"></i>  Schüler hinzufügen</h4>
+                                                    <h4><i class="fa fa-user"></i>  Schüler verwalten</h4>
                                                 </div>
                                             </div>
                                         </div>
@@ -61,7 +61,17 @@
                                         <div class="card h-100 teacher-option" onclick="location.href='/administration/teachers/'">
                                             <div class="card-block homework">
                                                 <div class="card-text">
-                                                    <h4><i class="fa fa-user"></i>  Lehrer hinzufügen</h4>
+                                                    <h4><i class="fa fa-user"></i>  Lehrer verwalten</h4>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <div class="card h-100 teacher-option" onclick="location.href='/administration/classes/'">
+                                            <div class="card-block homework">
+                                                <div class="card-text">
+                                                    <h4><i class="fa fa-user"></i>  Klassen verwalten</h4>
                                                 </div>
                                             </div>
                                         </div>
